# Whiteboard

./: CMakeLists.txt  com.cpp  com.h  drawingcmd.cpp  drawingcmd.h  main.cpp  mainwindow.cpp  mainwindow.cpp.jQUpdR  mainwindow.h  receiver.cpp  receiver.h  scribblearea.cpp  scribblearea.h  sender.cpp  sender.h  whiteboard.cpp  whiteboard.h  window.cpp  window.h  window.ui
